# truth-news-bot

./: .gitignore  Dockerfile  LICENSE  README.md  asahi_sankei_news_bot.py  bbc_news.py  clean.py  cnn_news_bot.py  crontab.txt  docker-compose.yaml  initialize.py  main.py  migration.py  news_bot.py  news_bot_v2.py  news_feeder.py  nhk_news_bot.py  nhk_news_feed.py  pyproject.toml  truth_social.py
data_files/: asahi_previous_url.txt  bbc_web_previous_url.txt  bbc_youtube_previous_url.txt  cnn_previous_url.txt  nhk_previous_url.txt  sankei_previous_url.txt
models/: __init__.py  article.py  media.py
service/: news_feeder.py  news_feeder_v2.py  truth_social.py  url_manager.py
truthbrush/: api.py
utils/: __init__.py  logger_config.py
