[tool.poetry]
name = "truth-news-bot"
version = "0.1.5"
description = "News bot for Truth Social"
authors = ["tebukuro <58774766+tebukurokun@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"
loguru = "^0.6.0"
python-dotenv = "^0.19.2"
python-dateutil = "^2.8.2"
curl_cffi = "^0.5.2"
feedparser = "^6.0.10"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
