[tool.poetry]
name = "truth-news-bot"
version = "0.1.5"
description = "News bot for Truth Social"
authors = ["tebukuro <58774766+tebukurokun@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
click = "^8.0.4"
loguru = "^0.7.3"
python-dotenv = "^1.1.0"
python-dateutil = "^2.8.2"
curl-cffi = "^0.11.1"
feedparser = "^6.0.10"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
